--- a/LibAudio/src/main/AndroidManifest.xml
+++ b/LibAudio/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.bihe0832.android.lib.sherpa.onnx">
-
+<manifest package="com.bihe0832.android.lib.audio">
 
     <application>
 
