--- a/dependencies_asr.gradle
+++ b/dependencies_asr.gradle
@@ -11,7 +11,7 @@ ext.asrmoduleInfo = [
                 "version"            : "6.12.1",
                 "artifactId"         : "lib-sherpa-onnx",
                 "apidependenciesList": [
-
+                        "LibAudio"
                 ]
         ],
         "LibVoiceRecord"      : [
