--- a/dependencies_lock_widget.gradle
+++ b/dependencies_lock_widget.gradle
@@ -1,26 +1,26 @@
 apply from: rootDir.toString() + '/config.gradle'
 def project = ext
 ext.widgetmoduleInfo = [
-    "LibScreenWrapper": [
-        "version"            : "6.13.2",
-        "artifactId"         : "lib-wrapper-screen",
-        "apidependenciesList": [
-                "LibWidget", "LibLockScreen"
-        ]
-    ],
-    "LibWidget"       : [
-        "version"            : "6.13.2",
-        "artifactId"         : "lib-widget",
-        "apidependenciesList": [
-                "LibLog", "LibConfig", "LibOS", "LibDialog", "LibPermission",
-                project.androidsupport.worker
-        ]
-    ],
-    "LibLockScreen"   : [
-        "version"            : "6.13.2",
-        "artifactId"         : "lib-lock-screen",
-        "apidependenciesList": [
-            "LibLog", "LibConfig", "LibPermission", "LibNotification"
-        ]
-    ],
+        "LibScreenWrapper": [
+                "version"            : "6.13.2",
+                "artifactId"         : "lib-wrapper-screen",
+                "apidependenciesList": [
+                        "LibWidget", "LibLockScreen"
+                ]
+        ],
+        "LibWidget"       : [
+                "version"            : "6.13.2",
+                "artifactId"         : "lib-widget",
+                "apidependenciesList": [
+                        "LibLog", "LibConfig", "LibOS", "LibDialog", "LibPermission",
+                        "LibForegroundService", project.androidsupport.worker
+                ]
+        ],
+        "LibLockScreen"   : [
+                "version"            : "6.13.2",
+                "artifactId"         : "lib-lock-screen",
+                "apidependenciesList": [
+                        "LibLog", "LibConfig", "LibPermission", "LibNotification"
+                ]
+        ],
 ]
