--- a/dependencies_asr.gradle
+++ b/dependencies_asr.gradle
@@ -1,14 +1,14 @@
 apply from: rootDir.toString() + '/config.gradle'
 ext.asrmoduleInfo = [
         "LibASR"              : [
-                "version"            : "6.13.4",
+                "version"            : "6.13.5",
                 "artifactId"         : "lib-asr-wrapper",
                 "apidependenciesList": [
                         "LibSpeechRecognition", "LibASRMin"
                 ]
         ],
         "LibASRMin"           : [
-                "version"            : "6.13.4",
+                "version"            : "6.13.5",
                 "artifactId"         : "lib-asr-min",
                 "apidependenciesList": [
                         "LibAudioPlayer", "LibTTS", "LibAudio"
@@ -29,28 +29,35 @@ ext.asrmoduleInfo = [
                 ]
         ],
         "LibAudio"            : [
-                "version"            : "6.13.4",
+                "version"            : "6.13.5",
                 "artifactId"         : "lib-audio",
                 "apidependenciesList": [
                         "LibCommonUtils", "LibFile", "LibForegroundService"
                 ]
         ],
+        "LibOnnx"       : [
+                "version"            : "6.13.5",
+                "artifactId"         : "lib-onnx",
+                "apidependenciesList": [
+
+                ]
+        ],
         "LibSherpaOnnx"       : [
-                "version"            : "6.13.4",
+                "version"            : "6.13.5",
                 "artifactId"         : "lib-sherpa-onnx",
                 "apidependenciesList": [
-                        "LibAudio"
+                        "LibAudio","LibOnnx"
                 ]
         ],
         "LibAudioRecord"      : [
-                "version"            : "6.13.4",
+                "version"            : "6.13.5",
                 "artifactId"         : "lib-audio-record",
                 "apidependenciesList": [
                         "LibSherpaOnnx", "LibAAF", "LibLog", "LibCommonUtils", "LibFile"
                 ]
         ],
         "LibSpeechRecognition": [
-                "version"            : "6.13.4",
+                "version"            : "6.13.5",
                 "artifactId"         : "lib-speech-recognition",
                 "apidependenciesList": [
                         "LibAudioRecord"
