优化前台服务及基于widget唤起的前台服务

--- a/BaseDebug/src/main/AndroidManifest.xml
+++ b/BaseDebug/src/main/AndroidManifest.xml
@@ -194,6 +194,17 @@
 
         </service>
 
+        <service
+                android:name="com.bihe0832.android.base.debug.widget.DebugForegroundService"
+                android:enabled="true"
+                android:exported="true"
+                android:process="@string/process_name_domain" />
+
+        <service
+                android:name="com.bihe0832.android.base.debug.widget.DebugService"
+                android:enabled="true"
+                android:exported="true" />
+
     </application>
 
 </manifest>
