日志优化，增加落地H5日志，日志查看支持路由查看

--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:theme="@style/AAF.ActivityTheme" />
 
         <activity
-            android:name="com.bihe0832.android.test.module.AAFDebugLogActivity"
+            android:name="com.bihe0832.android.test.module.AAFDebugLogListActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|layoutDirection"
             android:screenOrientation="portrait"
             android:theme="@style/AAF.ActivityTheme" />
