优化日志展示细节

--- a/dependencies_common.gradle
+++ b/dependencies_common.gradle
@@ -7,6 +7,9 @@ ext.commonmoduleInfo = [
                 "artifactId"         : "common-debug",
                 "apidependenciesList": [
                         "Framework", "CommonWrapperMin", "CommonAceEditor", "LibScreenWrapper"
+                ],
+                "specialdependenciesList": [
+                        "kapt": ["RouterCompiler"]
                 ]
         ],
         "CommonWrapper"         : [
