--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         maven { url 'https://developer.huawei.com/repo/' }
 
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1901/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1902/content/" }
 
     }
     dependencies {
@@ -36,6 +37,7 @@ allprojects {
         maven { url 'https://developer.huawei.com/repo/' }
 
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1901/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1902/content/" }
 
     }
 
