调整模型文件信息

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -58,6 +58,7 @@ ext.coremoduleInfo = [
                 "artifactId"         : "",
                 "apidependenciesList": [
                         "Application", "CommonDebug", "CommonTBSFeedback",
+                        "com.bihe0832.android:lib-sherpa-endpoint-model:6.16.7",
                         "LibSherpaEndpointModel"
                 ]
         ],
